--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "uartrpcserver.h": "c",
         "stdint.h": "c",
         "checksum.h": "c",
-        "cstdlib": "c"
+        "cstdlib": "c",
+        "cstdint": "c"
     }
 }
